# mc-rs-tui

./: CLAUDE.md  Cargo.toml  TODO.md
.github/workflows/: ci.yml
crates/mc/: Cargo.toml
crates/mc-config/: Cargo.toml
crates/mc-config/src/: app.rs  extbind.rs  filehighlight.rs  history.rs  hotlist.rs  icons.rs  keymap.rs  lib.rs  paths.rs  scheme.rs  skin.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: action.rs  error.rs  key.rs  lib.rs  path.rs  theme.rs
crates/mc-diff/: Cargo.toml
crates/mc-diff/src/: lib.rs
crates/mc-find/: Cargo.toml
crates/mc-find/src/: lib.rs
crates/mc-jobs/: Cargo.toml
crates/mc-jobs/src/: lib.rs  queue.rs  trait_.rs
crates/mc-jobs/src/ops/: copy.rs  delete.rs  mod.rs  move.rs
crates/mc-jobs/tests/: jobs.rs
crates/mc-tui/: Cargo.toml
crates/mc-tui/src/: app.rs  clipboard.rs  diff_widget.rs  editor_spawn.rs  event.rs  git.rs  lib.rs  loop_.rs  subshell.rs  theme.rs  viewer_widget.rs
crates/mc-tui/src/app/: events.rs  mod.rs  modal.rs  mouse.rs  ops.rs  render.rs
crates/mc-tui/src/dialog/: confirm.rs  copy_move.rs  find.rs  help.rs  hotlist.rs  input.rs  jobs_view.rs  layout.rs  learn_keys.rs  menubar.rs  mod.rs  options.rs  password.rs  progress.rs  theme.rs  user_menu.rs  vfs_list.rs
crates/mc-tui/src/panel/: mod.rs  sort.rs
crates/mc-vfs/: Cargo.toml
crates/mc-vfs-archive/: Cargo.toml
crates/mc-vfs-archive/src/: cpio_vfs.rs  lib.rs  rar_vfs.rs  sevenz_vfs.rs  tar_vfs.rs  zip_vfs.rs
crates/mc-vfs-net/: Cargo.toml
crates/mc-vfs-net/src/: dav.rs  ftp.rs  known_hosts.rs  lib.rs  sftp.rs
crates/mc-vfs/src/: local.rs  registry.rs  trait_.rs
crates/mc/src/: main.rs
src/: lib.rs  main.rs
src/config/: app.rs  extbind.rs  filehighlight.rs  history.rs  hotlist.rs  icons.rs  io.rs  keymap.rs  mod.rs  paths.rs  scheme.rs  skin.rs
src/core/: entry.rs  key.rs  macros.rs  mod.rs  path.rs  platform.rs
src/find/: mod.rs
src/jobs/: mod.rs  queue.rs  trait_.rs
src/jobs/ops/: copy.rs  delete.rs  mod.rs  move.rs
src/tui/: diff_widget.rs  editor_spawn.rs  event.rs  git.rs  glob.rs  loop_.rs  subshell.rs  theme.rs  viewer_widget.rs  watcher.rs
src/tui/app/: events.rs  mod.rs  modal.rs  mouse.rs  ops.rs  render.rs
src/tui/dialog/: confirm.rs  copy_move.rs  error.rs  find.rs  help.rs  hotlist.rs  input.rs  jobs_view.rs  layout.rs  learn_keys.rs  menubar.rs  mod.rs  options.rs  password.rs  progress.rs  theme.rs  user_menu.rs  vfs_list.rs
src/tui/panel/: mod.rs  sort.rs
src/vfs/: local.rs  mod.rs  registry.rs  trait_.rs
src/vfs_archive/: cpio_vfs.rs  mod.rs  rar_vfs.rs  sevenz_vfs.rs  tar_vfs.rs  zip_vfs.rs
src/vfs_net/: dav.rs  ftp.rs  known_hosts.rs  mod.rs  sftp.rs
tests/: jobs.rs
