[workspace]
resolver = "3"
members = [
    "crates/mc-core",
    "crates/mc-vfs",
    "crates/mc-jobs",
    "crates/mc-config",
    "crates/mc-tui",
    "crates/mc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/uxsoft/mc-rs-tui"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
mc-core = { path = "crates/mc-core" }
mc-vfs = { path = "crates/mc-vfs" }
mc-jobs = { path = "crates/mc-jobs" }
mc-config = { path = "crates/mc-config" }
mc-tui = { path = "crates/mc-tui" }

# Tier-1 third-party
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "io-util", "time", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
