[package]
name = "mc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
