[package]
name = "mc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-vfs = { workspace = true }
mc-vfs-archive = { workspace = true }
mc-jobs = { workspace = true }
mc-find = { workspace = true }
mc-diff = { workspace = true }
mc-vfs-net = { workspace = true }
mc-config = { workspace = true }
tokio-util = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
which = "8"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
arboard = { version = "3", default-features = false }
base64 = "0.22"
encoding_rs = "0.8"
jwalk = "0.8"
pathdiff = "0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tempfile = "3"
tree_magic_mini = "3"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["user", "fs"] }

[features]
default = []
rar = ["mc-vfs-archive/rar"]

[lints]
workspace = true
