[package]
name = "mc-vfs-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-vfs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tar = "0.4"
zip = { version = "5", default-features = false, features = ["deflate"] }
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
cpio-archive = "0.10"
sevenz-rust2 = { version = "0.18", default-features = false }
unrar = { version = "0.5", optional = true }

[features]
default = []
rar = ["dep:unrar"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
