[package]
name = "mc-vfs-net"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-vfs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util", "net", "macros"] }
tracing = { workspace = true }
russh = "0.54"
russh-sftp = "2"

[lints]
workspace = true
