[package]
name = "mc-vfs-net"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-vfs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util", "net", "macros"] }
tracing = { workspace = true }
russh = "0.54"
russh-sftp = "2"
suppaftp = { version = "8", default-features = false, features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = "0.38"
percent-encoding = "2"
url = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
