[package]
name = "mc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mc-rs"
path = "src/main.rs"

[dependencies]
mc-config = { workspace = true }
mc-tui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }

[features]
default = []
rar = ["mc-tui/rar"]

[lints]
workspace = true
